# Better-Terminal

./: Cargo.toml  Makefile  README.md  config.toml
better-gpu/: Cargo.toml
better-gpu/src/: better_gpu.rs  lib.rs
better-gpu/src/components/quad/: mod.rs
better-gpu/src/components/rich_text/: mod.rs  positioning_tests.rs  text.rs
better-gpu/src/context/: mod.rs
better-gpu/src/font/: mod.rs
better-gpu/src/font_introspector/: font.rs
better-gpu/src/font_introspector/scale/: mod.rs
better-gpu/src/layout/: content.rs  render_data.rs
better-gpu/src/sugarloaf/: graphics.rs  state.rs
better-pty/: Cargo.toml
better-pty/src/: lib.rs
better-terminal/: Cargo.toml
better-terminal/src/: application.rs  cli.rs  hints.rs  lib.rs  main.rs  messenger.rs  scheduler.rs  watcher.rs
better-terminal/src/ansi/: graphics.rs  iterm2_image_protocol.rs  sixel.rs
better-terminal/src/bindings/: kitty_keyboard.rs  mod.rs
better-terminal/src/config/: mod.rs  renderer.rs  window.rs
better-terminal/src/context/: grid.rs  mod.rs  renderable.rs  title.rs
better-terminal/src/crosswords/: mod.rs
better-terminal/src/error/: mod.rs
better-terminal/src/event/: mod.rs
better-terminal/src/mouse/: mod.rs
better-terminal/src/performer/: handler.rs  mod.rs
better-terminal/src/renderer/: font_cache.rs  mod.rs  navigation.rs  search.rs  utils.rs
better-terminal/src/router/: mod.rs  window.rs
better-terminal/src/router/routes/: assistant.rs  dialog.rs  welcome.rs
better-terminal/src/screen/: hint.rs  mod.rs  touch.rs
better-window/: Cargo.toml
better-window/src/: cursor.rs  event.rs  event_loop.rs  icon.rs  keyboard.rs  lib.rs  window.rs
better-window/src/platform/: macos.rs  run_on_demand.rs  windows.rs  x11.rs
better-window/src/platform_impl/linux/wayland/window/: mod.rs
better-window/src/platform_impl/macos/: window_delegate.rs
better-window/src/platform_impl/windows/: monitor.rs
copa/: Cargo.toml
copa/src/: lib.rs
corcovado/: Cargo.toml
corcovado/src/: lib.rs
