[package]
name = "better-gpu"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
authors = ["Better Terminal Contributors"]
description = "Hardware-accelerated rendering engine for Better Terminal, based on WebGPU"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wgpu = { workspace = true }
bytemuck = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true, features = ["derive"] }
image = { workspace = true }
unicode-width = { workspace = true }
guillotiere = "0.6.2"
rustc-hash = { workspace = true }
raw-window-handle = { workspace = true }
parking_lot = { workspace = true }
approx = "0.5.1"
lru = "0.16.0"
skrifa = "0.33.1"
halfbrown = "0.3.0"
half = "2.6.0"
num-traits = "0.2.19"
yazi = { version = "0.2.1", optional = true }
zeno = { version = "0.3.3", optional = true }
futures = { workspace = true }
thiserror = "2.0.1"
dashmap = { workspace = true }
librashader-common = "0.8.1"
librashader-presets = "0.8.1"
librashader-preprocess = "0.8.1"
librashader-pack = "0.8.1"
librashader-reflect = { version = "0.8.1", features = [
    "stable",
    "wgsl",
], default-features = false }
librashader-runtime = "0.8.1"
librashader-cache = "0.8.1"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
rayon = "1.10.0"
twox-hash = { version = "2.1.1", default-features = false, features = [
    "std",
    "xxhash64",
] }
memmap2 = { workspace = true }
slotmap = { version = "1.0.7", default-features = false }
tinyvec = { version = "1.9.0", features = ["alloc"] }
ttf-parser = { version = "0.25.1", default-features = false, features = ["opentype-layout", "apple-layout", "variable-fonts", "glyph-names", "no-std-float"] }

[target.'cfg(all(unix, not(any(target_os = "macos", target_os = "android"))))'.dependencies]
fontconfig-parser = { version = "0.5.8", default-features = false }

[features]
default = ["scale", "render"]
scale = ["yazi", "zeno"]
render = ["scale", "zeno/eval"]

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.7"
console_log = "0.2.2"
js-sys = "0.3.61"
wasm-bindgen = "0.2.87"
wasm-bindgen-futures = "0.4.34"
wasm-bindgen-test = "0.3.42"