[package]
name = "better-terminal"
description = "Better Terminal - a hardware-accelerated GPU terminal emulator"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
license = { workspace = true }

[[bin]]
name = "better"
path = "src/bin.rs"

[dependencies]
tracing = { workspace = true }
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "registry"] }
wgpu = { workspace = true }
better-gpu = { workspace = true }
better-pty = { workspace = true }
better-window = { workspace = true }
copa = { workspace = true }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
bitflags = { workspace = true }
futures = { workspace = true }
regex = { workspace = true }
raw-window-handle = { workspace = true }
clap = { version = "4.5.42", features = ["derive"] }
dirs = "6.0.0"
notify = "8.2.0"
rustc-hash = { workspace = true }
image_rs = { package = "image", version = "0.25.5", default-features = false, features = ["gif", "jpeg", "ico", "png", "pnm", "webp", "bmp"] }
libc = { workspace = true }
parking_lot = { workspace = true }
serde = { workspace = true }
unicode-width = { workspace = true }
url = { workspace = true }
smallvec = { workspace = true }
lru = "0.16.0"
toml = "0.9.2"
base64 = { workspace = true }
memchr = { version = "2.7.4", default-features = false }
bytemuck = { workspace = true }
copypasta = { version = "0.10.1", default-features = false }
regex-automata = "0.4.9"
cursor-icon = { version = "1.1.0", default-features = false }
simdutf8 = { version = "0.1.5", default-features = false }

[target.'cfg(target_os = "macos")'.dependencies]
objc = "0.2.7"

[target.'cfg(windows)'.dependencies]
ahash = { version = "0.8.11", default-features = false, features = ["std"] }
dunce = "1.0.5"
tinyvec = { version = "1.8.1", features = ["alloc"] }
windows-sys = { version = "0.60.2", features = [
    "Win32_System_Console",
    "Win32_Foundation",
    "Win32_Security",
    "Win32_System_LibraryLoader",
    "Win32_System_Threading",
    "Win32_System_WindowsProgramming",
    "Win32_System_IO",
    "Win32_Graphics_Gdi",
    "Win32_UI_Shell",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_Diagnostics_Debug",
]}

[features]
default = ["wayland", "x11"]
x11 = [
    "better-window/x11",
    "copypasta/x11",
]
wayland = [
    "better-window/wayland", 
    "better-window/wayland-dlopen",
    "copypasta/wayland",
]