[package]
name = "corcovado"
version = { workspace = true }
license = "MIT"
edition = "2015"
authors = ["Better Terminal Contributors"]
description = "Non-blocking IO library for Better Terminal"
keywords = ["io", "async", "non-blocking"]
categories = ["asynchronous"]

[dependencies]
tracing = { workspace = true }
iovec = "0.1.4"
slab = "0.4.9"
net2 = "0.2.39"
cfg-if = "0.1.9"

[target.'cfg(target_os = "fuchsia")'.dependencies]
fuchsia-zircon = "0.3.2"
fuchsia-zircon-sys = "0.3.2"

[target.'cfg(unix)'.dependencies]
libc = { workspace = true }

[target.'cfg(windows)'.dependencies]
windows-sys = "0.42.0"
miow = "0.5.0"